# bandit

./: .gitignore  README.md  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/core_simulation_20260213/: index.md  metadata.json  plan.md  spec.md
data/MINDsmall_dev/: behaviors.tsv  news.tsv
docs/: blog_post.md
scripts/: generate_sample_data.py  run_comparison.py
src/bandit/: __init__.py  run_comparison.py
src/bandit/algorithms/: __init__.py  base.py  epsilon_greedy.py  linucb.py  random_choice.py  thompson_sampling.py
src/bandit/data/: __init__.py  loader.py
src/bandit/metrics/: __init__.py  csv_logger.py  plotting.py
src/bandit/simulation/: __init__.py  comparison.py  engine.py
src/bandit/utils/: __init__.py  metrics.py
tests/: test_base_algorithm.py  test_comparison.py  test_csv_logger.py  test_data_loader.py  test_epsilon_greedy.py  test_metrics.py  test_random_choice.py  test_simulation_engine.py  test_thompson_sampling.py
